<?xml version="1.0"?>
<package format="2">
  <name>vda5050_msgs</name>
  <version>0.0.0</version>
  <description>
    The vda5050_msgs package contains the datatypes (json objects) specified by the VDA
    "Arbeitskreis Schlüsseltechnologien" in their recommondation "VDA 5050 - Schnittstelle zur Kommunikation zwischen
    Fahrerlosen Transportfahrzeugen (FTF) und einer Leitsteuerung.
    This package provides the message files which can be used to be (de-)serialized with an implementation of mqtt
    (e.g mqtt_bridge) or to plain json (rospy_message_converter) or similar.
  </description>

  <maintainer email="jba@ipa.fhg.de">Jannik Abbenseth</maintainer>


  <license>BSD</license>


  <url type="website">https://www.vda.de/dam/vda/publications/2019/Logistik/VDA5050.pdf</url> -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
</package>
